[tool.poetry]
name = "grove"
version = "0.1.0"
description = "More than a feed"
authors = ["Mike Risse <rissem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.0"
feedparser = "^6.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
